--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -2,4 +2,12 @@
   position: absolute;
   top: 8px;
   right: 40px;
+  width: 20px;
+  height: 18px;
+  border: none;
+  background-image: url("../../../images/like_button.svg");
+  background-color: transparent;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
