--- a/blocks/pop-up/__close/pop-up__close.css
+++ b/blocks/pop-up/__close/pop-up__close.css
@@ -2,6 +2,15 @@
   position: absolute;
   top: calc(0px - 13px - 26px);
   right: 0;
+  width: 26px;
+  height: 26px;
+  color: transparent;
+  border: none;
+  background-image: url("../../../images/close_button.svg");
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
 }
 
 @media screen and (min-width: 880px) {
