--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -4,6 +4,14 @@
   right: -26px;
   margin-left: 10px;
   display: block;
+  width: 18px;
+  height: 18px;
+  background-image: url("../../../images/edit_button.svg");
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border: none;
+  background-size: contain;
+  background-position: center center;
 }
 
 @media screen and (min-width: 880px) {
