--- a/pages/index.css
+++ b/pages/index.css
@@ -12,14 +12,9 @@
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__info-title/profile__info-title.css);
 @import url(../blocks/profile/__info-text/profile__info-text.css);
+@import url(../blocks/button/button.css);
 @import url(../blocks/profile/__edit/profile__edit.css);
 @import url(../blocks/profile/__add/profile__add.css);
-
-@import url(../blocks/buton/button.css);
-@import url(../blocks/buton/__edit/button__edit.css);
-@import url(../blocks/buton/__add/button__add.css);
-@import url(../blocks/buton/__like/button__like.css);
-@import url(../blocks/buton/__close/button__close.css);
 
 @import url(../blocks/cards/cards.css);
 
