--- a/blocks/pop-up/__close/pop-up__close.css
+++ b/blocks/pop-up/__close/pop-up__close.css
@@ -2,8 +2,8 @@
   position: absolute;
   top: calc(0px - 13px - 26px);
   right: 0;
-  width: 26px;
-  height: 26px;
+  min-width: 26px;
+  min-height: 26px;
   color: transparent;
   border: none;
   background-image: url("../../../images/close_button.svg");
