--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,7 +1,7 @@
 .button {
   padding: 0;
-  width: 100%;
-  height: 50px;
+  min-width: 100%;
+  min-height: 50px;
   font-family: "Inter", helvetica, sans-serif;
   font-size: 14px;
   line-height: 1.21;
