--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -1,9 +1,8 @@
 .card__like {
-  position: absolute;
-  top: 8px;
-  right: 40px;
-  width: 20px;
-  height: 18px;
+  display: flex;
+  justify-self: flex-end;
+  min-width: 20px;
+  min-height: 18px;
   border: none;
   background-image: url("../../../images/like_button.svg");
   background-color: transparent;
