--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -1,6 +1,7 @@
 .card__title {
-  margin: 25px 25% 31px 21px;
   padding: 0;
+  margin: 0;
+  max-width: 190px;
   font-family: "Inter", helvetica, sans-serif;
   font-size: 24px;
   line-height: 1.21;
