--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,21 +1,20 @@
 .profile__edit {
-  position: absolute;
-  top: 8px;
-  right: -26px;
   margin-left: 10px;
-  display: block;
-  width: 18px;
-  height: 18px;
+  margin-top: 7px;
+  display: flex;
+  min-width: 18px;
+  min-height: 18px;
   background-image: url("../../../images/edit_button.svg");
   background-color: transparent;
   background-repeat: no-repeat;
   border: none;
   background-size: contain;
   background-position: center center;
+  align-self: flex-start;
 }
 
 @media screen and (min-width: 880px) {
   .profile__edit {
-    top: 15px;
+    margin-top: 15px;
   }
 }
