--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,4 +1,5 @@
 .profile {
+  padding: 42px 0 36px 0;
   display: flex;
   align-items: center;
   margin: 0 auto;
@@ -10,6 +11,7 @@
   .profile {
     width: 100%;
     display: grid;
-    grid-template-columns: min-content max-content 1fr;
+    grid-template-columns: min-content 4fr 1fr;
+    padding: 40px 0 50px 0;
   }
 }
