--- a/blocks/pop-up/__submit/pop-up__submit.css
+++ b/blocks/pop-up/__submit/pop-up__submit.css
@@ -2,6 +2,10 @@
   margin-top: 45px;
 }
 
+.pop-up__submit:hover {
+  opacity: 0.8;
+}
+
 @media screen and (min-width: 880px) {
   .pop-up__submit {
     margin-top: 48px;
