--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,7 +5,7 @@
 
 @media screen and (min-width: 880px) {
   .header__logo {
-    margin: 0;
+    margin: 45px 0 41px;
     max-height: 33px;
   }
 }
