--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,10 @@
 .header {
-  min-height: 84px;
   display: flex;
   flex-direction: row;
   align-content: center;
   align-items: center;
   justify-items: center;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   box-sizing: border-box;
 }
 
