--- a/blocks/pop-up/__close/pop-up__close.css
+++ b/blocks/pop-up/__close/pop-up__close.css
@@ -13,6 +13,10 @@
   background-position: center center;
 }
 
+.pop-up__close:hover {
+  opacity: 0.6;
+}
+
 @media screen and (min-width: 880px) {
   .pop-up__close {
     width: 40px;
