--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -7,10 +7,14 @@
   color: transparent;
 }
 
+.profile__add:hover {
+  opacity: 0.6;
+}
+
 @media screen and (min-width: 880px) {
   .profile__add {
     margin: 0;
-    max-width: 150px;
+    min-width: 150px;
     justify-self: flex-end;
   }
 }
