--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -13,8 +13,14 @@
   align-self: flex-start;
 }
 
+.profile__edit:hover {
+  opacity: 0.6;
+}
+
 @media screen and (min-width: 880px) {
   .profile__edit {
+    min-width: 24px;
+    min-height: 24px;
     margin-top: 15px;
   }
 }
