--- a/blocks/profile/__info-text/profile__info-text.css
+++ b/blocks/profile/__info-text/profile__info-text.css
@@ -6,6 +6,10 @@
   font-size: 14px;
   line-height: 1.21;
   font-weight: 400;
+  max-width: 282px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 880px) {
