--- a/blocks/profile/__info-title/profile__info-title.css
+++ b/blocks/profile/__info-title/profile__info-title.css
@@ -6,10 +6,15 @@
   font-size: 27px;
   line-height: 1.21;
   font-weight: 500;
+  max-width: 282px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 880px) {
   .profile__info-title {
+    max-width: 300px;
     text-align: left;
     font-size: 42px;
     line-height: 1.142;
