--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -2,5 +2,7 @@
   width: 100%;
   height: 282px;
   object-fit: cover;
-  object-position: center center;
+  object-position: center;
+  transition: width .25s ease-in-out;
+  overflow: hidden;
 }
