--- a/blocks/pop-up/__close/pop-up__close.css
+++ b/blocks/pop-up/__close/pop-up__close.css
@@ -1,9 +1,9 @@
 .pop-up__close {
   position: absolute;
-  top: calc(0px - 13px - 26px);
-  right: 0;
-  min-width: 26px;
-  min-height: 26px;
+  top: calc(0px - 0px - 30px);
+  right: -26px;
+  min-width: 30px;
+  min-height: 30px;
   color: transparent;
   border: none;
   background-image: url("../../../images/close_button.svg");
