--- a/blocks/pop-up/pop-up.css
+++ b/blocks/pop-up/pop-up.css
@@ -1,6 +1,10 @@
 .pop-up {
-  display: none;
+  display: flex;
   position: fixed;
+  align-items: center;
+  justify-items: center;
+  align-content: center;
+  justify-content: center;
   height: 100%;
   z-index: 2;
   top: 0;
@@ -8,4 +12,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+  opacity: 0;
+  transition: all .25s ease-in-out;
 }
