hotfixes after first review: js script corrected, cursor ponter added for each interactive element

--- a/blocks/card/__delete/card__delete.css
+++ b/blocks/card/__delete/card__delete.css
@@ -12,6 +12,7 @@
   background-repeat: no-repeat;
   background-position: center center;
   z-index: 1;
+  cursor: pointer;
 }
 
 .card__delete:hover {
