--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -9,6 +9,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
+  cursor: pointer;
 }
 
 .card__like:hover {
