hotfixes for JS script function adding a new card, CSS fixes for interactive elements

--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -12,6 +12,7 @@
   border-radius: 2px;
   box-sizing: border-box;
   transition: opacity 0.25s ease-in-out;
+  cursor: pointer;
 }
 
 .button:focus {
