--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,6 +1,7 @@
 .card__image {
   width: 100%;
-  height: 282px;
+  max-height: 282px;
+  min-height: 282px;
   object-fit: cover;
   object-position: center;
   transition: width .25s ease-in-out;
