--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,7 @@
 .profile__avatar {
+  position: relative;
   max-width: 120px;
   min-height: 120px;
   border-radius: 50%;
-  background-color: red;
+  object-fit: cover;
 }
